--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,17 +1,29 @@
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 WORKDIR /app
 
+# Install system dependencies for numpy, scipy, torch, sklearn
 RUN apt-get update && apt-get install -y \
     build-essential \
+    gcc \
+    g++ \
+    libopenblas-dev \
+    liblapack-dev \
     && rm -rf /var/lib/apt/lists/*
 
+# Upgrade pip first (important for modern wheels)
+RUN pip install --upgrade pip
+
+# Copy requirements first
 COPY requirements.txt .
 
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy rest of the app
 COPY . .
 
 EXPOSE 5000
 
+# Run with gunicorn
 CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app:app"]
