--- a/S-Frontend/vercel.json
+++ b/S-Frontend/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "http://209.38.29.51:5000/:path*"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
