--- a/S-Frontend/vercel.json
+++ b/S-Frontend/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "https://api.pimart.software/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
