--- a/S-Frontend/package.json
+++ b/S-Frontend/package.json
@@ -12,6 +12,7 @@
     "@primeuix/themes": "^2.0.3",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "pinia": "^3.0.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.5.4",
     "vue": "^3.5.24",
